--- a/menu.html
+++ b/menu.html
@@ -3,25 +3,48 @@
 <html lang="tr">
 
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0">
 
     <title>Sprint Challenge - Menu</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/menu.css">
 </head>
 
 <body>
-    <div>
+    <div class="app">
         <!-- header -->
         <header>
-            ERGİNEER BAR VE MANGAL
+            <div class="header--div">
+                <div class="header--div__item">
+                    <a href="index.html">
+                        <h1>ERGİNEER BAR VE MANGAL</h1>
+                    </a>
+                </div>
 
-            <!-- nav -->
-            Menü
-            Rezervasyonlar
-            Özel Teklifler
-            İletişim
+                <nav class="header--div__item ">
+                    <div class="header--menu">
+                        <a href="menu.html" class="header--menu__item">Menü</a>
+                        <a href="" class="header--menu__item">Rezervasyonlar</a>
+                        <a href="" class="header--menu__item">Özel Teklifler</a>
+                        <a href="" class="header--menu__item">İletişim</a>
+                    </div>
+                </nav>
+
+                <div class="header--div__item social--media--links">
+                    <a href="facebook" class="social--media--link__item">
+                        <img src="./img/facebook.svg" alt="facebook-icon">
+                    </a>
+                    <a href="twitter" class="social--media--link__item">
+                        <img src="./img/twitter.svg" alt="twitter-icon">
+                    </a>
+                    <a href="instagram" class="social--media--link__item">
+                        <img src="./img/instagram.svg" alt="instagram-icon">
+                    </a>
+                </div>
+            </div>
         </header>
 
         <!-- spacer -->
@@ -29,89 +52,161 @@
 
         <!-- menu -->
         <article class="menu">
-            Yemekler & İçecekler
 
-            İçecekler
-            Soda
-            ₺2
-            Gazlılar
+            <h2>Yemekler & İçecekler</h2>
+            <div class="menu--content">
+                <div class="menu-section beverage">
+                    <h4>İçecekler</h4>
+                    <div class="beverage__item">
+                        <div>
+                            <p>
+                                Soda
+                            </p>
+                            <p>
+                                ₺2
+                            </p>
+                        </div>
+                        <p>
+                            Gazlı İçecekler
+                        </p>
+                    </div>
+                    <div class="beverage__item">
+                        <div>
+                            <p>Kahve</p>
+                            <p>₺2</p>
+                        </div>
+                        <p>İsteğe bağlı sütlü ve şekerli</p>
+                    </div>
+                    <div class="beverage__item">
+                        <div>
+                            <p>Bira</p>
+                            <p>₺5</p>
+                        </div>
+                        <p>Lezzetli ve Ferah</p>
+                    </div>
+                    <div class="beverage__item">
+                        <div>
+                            <p>Şarap</p>
+                            <p>₺5</p>
+                        </div>
+                        <p>Hafif ve meyveli</p>
+                    </div>
+                    <div class="beverage__item">
+                        <div>
+                            <p>Kokteyl</p>
+                            <p>₺10</p>
+                        </div>
+                        <p>Spesyellerimizi sorabilirsiniz</p>
+                    </div>
+                </div>
+                <div class="menu-section aperitif">
+                    <h4>Aperatifler</h4>
 
-            Kahve
-            ₺2
-            İsteğe bağlı sütlü ve şekerli
+                    <div class="aperitif__item">
+                        <div>
+                            <p>Kızartılmış Turşu</p>
+                            <p>₺6</p>
+                        </div>
+                        <p>Tavsiyemizdir</p>
+                        <p>(V)</p>
+                    </div>
+                    <div class="aperitif__item">
+                        <div>
+                            <p>Buffalo Soslu Kanat</p>
+                            <p>₺10</p>
+                        </div>
+                        <p>Her porsiyonda 5 adet kanat; hafif, orta veya acı sos ve bleu peyniri/çiftlik ve havuç
+                            çubukları ile servis edilir</p>
+                        <p>(GF)</p>
+                    </div>
+                    <div class="aperitif__item">
+                        <div>
+                            <p>Patates Kızartması</p>
+                            <p>₺5</p>
+                        </div>
+                        <p>Ev yapımı patates kızartması</p>
+                    </div>
+                </div>
+                <div class="menu-section soup--salad">
+                    <h4>Çorbalar ve Salatalar</h4>
+                    <div class="soup--salad__item">
+                        <div>
+                            <p>Ev Salatası</p>
+                            <p>₺8</p>
+                        </div>
+                        <p>Ispanak ve roka ile güzel sebzeler; ₺6 'ye tavuk ekleyebilirsiniz</p>
+                        <p>(GF, V)</p>
+                    </div>
+                    <div class="soup--salad__item">
+                        <div>
+                            <p>Fransız Soğan Çorbası</p>
+                            <p>₺4</p>
+                        </div>
+                        <p>Kalın bir peynir ve lezzetli ekmek ile servis edilir.</p>
+                    </div>
+                    <div class="soup--salad__item">
+                        <div>
+                            <p>Çedarlı Brokoli Çorbası</p>
+                            <p>₺5</p>
+                        </div>
+                        <p>Kremalı ve doldurma</p>
+                        <p>(GF)</p>
+                    </div>
+                </div>
+                <div class="menu-section appetizer">
+                    <h4>Mezeler</h4>
+                    <div class="appetizer__item">
+                        <div>
+                            <p>Domuz bifteği</p>
+                            <p>₺32</p>
+                        </div>
+                        <p>Patates püresi ve kavrulmuş kuşkonmaz ile servis edilir</p>
+                    </div>
+                    <div class="appetizer__item">
+                        <div>
+                            <p>Büyük Hamburger</p>
+                            <p>₺14</p>
+                        </div>
+                        <p>Patates kızartması ve salata ile servis edilir</p>
+                        <p>Cheseburger: (V)</p>
+                    </div>
+                    <div class="appetizer__item">
+                        <div>
+                            <p>Dana Kaburga</p>
+                            <p>₺18</p>
+                        </div>
+                        <p>Eşsiz lezzetiyle</p>
+                        <p>(GF)</p>
+                    </div>
+                </div>
 
-            Bira
-            ₺5
-            Lezzetli ve Ferah
-
-            Şarap
-            ₺5
-            Hafif ve meyveli
-
-            Kokteyl
-            ₺10
-            Spesyellerimizi sorabilirsiniz
-
-            Aperatifler
-            Kızartılmış Turşu
-            ₺6
-            Tavsiyemizdir
-            (V)
-
-            Buffalo Soslu Kanat
-            ₺10
-            Her porsiyonda 5 adet kanat; hafif, orta veya acı sos ve bleu peyniri/çiftlik ve havuç çubukları ile servis
-            edilir
-            (GF)
-
-            Patates Kızartması
-            ₺5
-            Ev yapımı patates kızartması
-
-            Çorbalar ve Salatalar
-            Ev Salatası
-            ₺8
-            Ispanak ve roka ile güzel sebzeler; ₺6 'ye tavuk ekleyebilirsiniz
-            (GF, V)
-
-            Fransız Soğan Çorbası
-            ₺4
-            Kalın bir peynir ve lezzetli ekmek ile servis edilir.
-
-            Çedarlı Brokoli Çorbası
-            ₺5
-            Kremalı ve doldurma
-            (GF)
-
-            Mezeler
-            Domuz bifteği
-            ₺32
-            Patates püresi ve kavrulmuş kuşkonmaz ile servis edilir
-
-            Büyük Hamburger
-            ₺14
-            Patates kızartması ve salata ile servis edilir
-            Cheseburger: (V)
-
-            Dana Kaburga
-            ₺18
-            Eşsiz lezzetiyle
-            (GF)
-
-            Tatlılar
-            Çikolatalı Kek
-            ₺7
-            Çikolata cenneti
-            (GF)
-
-            Kurabiye ve Dondurma
-            ₺6
-            2 kurabiye ve 1 top dondurma seçin
-
-            Profiteröllü Pasta
-            ₺8
-            Şefin önerisi
-            (GF)
+                <div class="menu-section dessert">
+                    <h4>Tatlılar</h4>
+                    <div class="dessert__item">
+                        <div>
+                            <p>Çikolatalı Kek</p>
+                            <p>₺7</p>
+                        </div>
+                        <p>Çikolata cenneti</p>
+                        <p>(GF)</p>
+                    </div>
+                    <div class="dessert__item">
+                        <div>
+                            <p>Kurabiye ve Dondurma</p>
+                            <p>₺6</p>
+                        </div>
+                        <p>2 kurabiye ve 1 top dondurma seçin</p>
+                    </div>
+                    <div class="dessert__item">
+                        <div>
+                            <p>Profiteröllü Pasta</p>
+                            <p>₺8</p>
+                        </div>
+                        <p>Şefin önerisi</p>
+                        <p>(GF)</p>
+                    </div>
+                </div>
+            </div>
         </article>
 
         <!-- spacer -->
@@ -120,15 +215,24 @@
         <!-- footer -->
         <footer>
             <!-- email signup -->
-            Mail listemize katılın!
-            Üye Ol
-            <!-- nav -->
-            Menü
-            Rezervasyonlar
-            Özel Teklifler
-            İletişim
-            <!-- copyright -->
-            ©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.
+            <div class="footer__item mail">
+                <p>Mail listemize katılın!</p>
+                <input type="text" placeholder="E-posta Adresi">
+                <button>Üye Ol</button>
+            </div>
+            <div class="footer__item links--copyright">
+                <nav class="links">
+                    <a href="menu.html" class="footer--nav__item">Menü</a>
+                    <a href="" class="footer--nav__item">Rezervasyonlar</a>
+                    <a href="" class="footer--nav__item">Özel Teklifler</a>
+                    <a href="" class="footer--nav__item">İletişim</a>
+                </nav>
+                <div class="copyright">
+                    <p>
+                        ©2022 ERGİNEER Restoran Zinciri, Tüm hakları saklıdır.
+                    </p>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
